lab-2-star/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app-service
spec:
  type: NodePort
  selector:
    app: example-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
