lab-2-star/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-app-ingress
spec:
  tls:
    - hosts:
        - www.not-example.com
      secretName: self-signed-secret
  rules:
    - host: www.not-example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example-app-service
                port:
                  number: 80
